--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="l drum">l</button>
     </div>
 
-    <footer>Made with ❤️ in London.</footer>
+    <footer>Made with passion during fun time :).</footer>
 
     <script src="index.js"></script>
   </body>
